--- a/elevatorsystem/Dockerfile
+++ b/elevatorsystem/Dockerfile
@@ -1,5 +1,10 @@
 FROM python:3.10.12
 
+RUN apt-get update && \
+    apt-get install -y nodejs npm && \
+    npm install -g netlify-cli
+
+
 WORKDIR /JumpingMind
 
 COPY requirements.txt requirements.txt
